RESOLVED FIXED113232
Re-establish autostart timeout extension on user interaction
https://bugs.webkit.org/show_bug.cgi?id=113232
Summary Re-establish autostart timeout extension on user interaction
Dean Jackson
Reported 2013-03-25 12:20:45 PDT
The fix for webkit.org/b/113231 disables the code that extends user-interaction based autostarting.
Attachments
Patch (4.67 KB, patch)
2013-05-07 08:19 PDT, Antoine Quint
no flags
Radar WebKit Bug Importer
Comment 1 2013-03-25 12:21:13 PDT
Antoine Quint
Comment 2 2013-05-07 08:19:55 PDT
WebKit Commit Bot
Comment 3 2013-05-07 11:12:05 PDT
Comment on attachment 200908 [details] Patch Clearing flags on attachment: 200908 Committed r149682: <http://trac.webkit.org/changeset/149682>
WebKit Commit Bot
Comment 4 2013-05-07 11:12:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.